# hongxiu

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
config/: config.json  config.yaml  hongxiu.json  hongxiu.yaml  poster-template.tex  summary.tmpl  summary_merge_figures.tmpl
hongxiu/: cmd.py  config.py  engine.py  llm.py  render.py  utils.py
hongxiu/config/: mindmap.tmpl  poster-template.tex
src/: cmd.py  config.py  engine.py  llm.py  md2mm.py  model.py  pdf_parser.py  render.py  utils.py
src/hongxiu/: __init__.py  cmd.py  engine.py  model.py  pdf_parser.py  render.py  utils.py
src/hongxiu/config/: palette.tex  summary_figures.tmpl
