[build-system]
requires = ["setuptools>=75.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hongxiu"
version = "0.1.0"
description = "A Python tool for research paper reading assistance."
readme = "README.md"
authors = [{name = "Tao Wang", email = "twang2218@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "dashscope>=1.20.11",
    "graphviz>=0.20.3",
    "langchain-anthropic>=0.2.3",
    "langchain-community>=0.3.2",
    "langchain-core>=0.3.11",
    "langchain-openai>=0.2.2",
    "loguru>=0.7.2",
    "portkey-ai>=1.9.3",
    "pydantic>=2.9.2",
    "pymupdf4llm>=0.0.17",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
pypdf = [
    "pypdf2>=3.0.1",
]
pix2text = [
    "pix2text>=1.1.1.2",
    "torch>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "deptry>=0.21.0",
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "types-pyyaml>=6.0.12.20240917",
    "types-toml>=0.10.8.20240310",
]

[tool.setuptools.packages.find]
include = ["hongxiu"]
